# Compute

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Renderer.h
src/: Renderer.cpp  main.cpp
